--- a/src/single-page/hero/hero.css
+++ b/src/single-page/hero/hero.css
@@ -1,5 +1,5 @@
 header {
-  @apply w-screen bg-[url('/public/background/background.webp')] bg-cover bg-center bg-no-repeat flex flex-col;
+  @apply w-full bg-[url('/public/background/background.webp')] bg-cover bg-center bg-no-repeat flex flex-col;
   @apply xs:p-10 xs:gap-2;
   @apply sm:p-14 sm:gap-2;
   @apply md:p-16 md:gap-2;
