--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,5 +1,5 @@
 .section-layout {
-  @apply flex items-center justify-center flex-col  bg-[#f5f5f5];
+  @apply flex items-center justify-center flex-col  bg-[#FFFFFF];
   @apply xs:p-7;
   @apply sm:p-9;
   @apply md:p-10;
