--- a/src/single-page/whybuy/whybuy.css
+++ b/src/single-page/whybuy/whybuy.css
@@ -1,12 +1,12 @@
 .section-whybuy {
-  @apply grid  gap-7 bg-[#f5f5f5];
+  @apply grid  gap-7 bg-[#FFFFFF];
   @apply md:grid-cols-2;
   @apply lg:grid-cols-2;
   @apply xl:grid-cols-2;
 }
 
 .card-whybuy {
-  @apply flex flex-col bg-[#ffff] shadow-custom rounded;
+  @apply flex flex-col bg-[#F7F7F7] shadow-custom rounded;
   @apply xs:p-9 xs:gap-4;
   @apply sm:p-10 sm:gap-4;
   @apply md:p-10 md:gap-4;
